--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "mdline",
   "version": "1.0.0",
   "description": "Markdown timeline format and toolkit.",
@@ -7,6 +8,9 @@
     "html",
     "markdown",
     "timeline"
+  ],
+  "workspaces": [
+    "packages/*"
   ],
   "homepage": "https://github.com/azu/mdline",
   "bugs": {
