--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test": "test"
   },
   "scripts": {
+    "bootstrap": "larna bootrap",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\""
   },
