--- a/packages/mdline-parser/package.json
+++ b/packages/mdline-parser/package.json
@@ -34,12 +34,23 @@
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "prepublish": "npm run --if-present build",
     "test": "mocha \"test/**/*.ts\"",
+    "updateSnapshot": "cross-env UPDATE_SNAPSHOT=1 npm test",
     "watch": "tsc -p . --watch"
   },
   "prettier": {
     "printWidth": 120,
     "singleQuote": false,
     "tabWidth": 4
+  },
+  "dependencies": {
+    "unified": "^7.1.0",
+    "remark-parse": "^6.0.3",
+    "remark-html": "^9.0.0",
+    "remark-stringify": "^6.0.4",
+    "select-section": "^0.4.6",
+    "mdast-util-to-string": "^1.0.5",
+    "unist-util-select": "^1.0.0",
+    "@mdline/types": "^1.0.0"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.5",
