--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "yarn bootstrap && yarn run build && yarn run netlify"
+  command = "yarn run bootstrap && yarn run build && yarn run netlify"
 [build.environment]
   NODE_VERSION = "10"
   YARN_VERSION = "1.12.3"
