--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 sudo: false
 language: node_js
 node_js: "stable"
+before_install:
+  - npm install -g yarn@latest
+install:
+  - yarn install --frozen-lockfile
+  - yarn run bootstrap
